# MonitorianLinuxEditionm

./: CMakeLists.txt  README.md  install.sh  resources.qrc  setup.sh
qml/: MonitorSlider.qml  main.qml
src/: ddcutilinterface.cpp  ddcutilinterface.h  main.cpp  monitor.cpp  monitor.h  monitormanager.cpp  monitormanager.h
